--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/naoya1110/jetbot_road_following_by_classification/blob/main/data_collection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/naoya1110/road_following_by_classification/blob/main/data_collection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "\n",
         "In the collision avoidance example, we made the JetBot moving around without collisions by using a CNN model that can distinguish `free` and `broked` situations from camera inputs.\n",
         "\n",
-        "In this week, we try to make the JetBot to follow a road by modifying the method we used for the collision avoidance. We are going to make a CNN model that can classify `go forward`, `turn left`, `turn right` situations, instead of `free` and `brocked` situations."
+        "In this series of **Road Following by Classification**, we will try to make the JetBot to follow a desired road just by modifying the method we used for the collision avoidance. We will train a CNN model to distinguish `go forward`, `turn left`, `turn right` situations, instead of `free` and `brocked` situations."
       ]
     },
     {
@@ -76,8 +76,8 @@
         "id": "VgtYpQdKY5Qb"
       },
       "source": [
-        "### Display Camera Input\n",
-        "Create a camera instance and an image widget, and then make a link between them."
+        "### Live Camera Feed\n",
+        "Let's create a camera instance and an image widget, and then make a link between them."
       ]
     },
     {
@@ -130,8 +130,8 @@
         "id": "Tshpi_6TZU_D"
       },
       "source": [
-        "### Create Robot Class Instance\n",
-        "Create an instance of `Robot` class named `robot` so that we can contol the JetBot."
+        "### Robot Class Instance\n",
+        "Create an instance of `Robot` class named `robot` so that we can contol the JetBot motors."
       ]
     },
     {
@@ -152,8 +152,8 @@
         "id": "zKRSntwJY5Qe"
       },
       "source": [
-        "### Create Data Directories\n",
-        "Create directories for storing the image data."
+        "### Data Directories\n",
+        "Create directories for accumulating the image data."
       ]
     },
     {
@@ -194,7 +194,7 @@
         "id": "-jiRAKdubrMV"
       },
       "source": [
-        "### Create Controller\n",
+        "### GUI Controller\n",
         "\n",
         "Create a GUI controller with forward, left and right buttons."
       ]
@@ -264,8 +264,8 @@
         "id": "7VrPlBV5bwN5"
       },
       "source": [
-        "### Define Action Functions\n",
-        "Define functions to make robot move forward, turn left and turn right."
+        "### Action Functions\n",
+        "Define functions to make robot move forward, turn left and turn right. You can change the parameters as you want."
       ]
     },
     {
@@ -300,7 +300,7 @@
         "id": "snR-xqRmb40t"
       },
       "source": [
-        "### Define Data Save Functions\n",
+        "### Data Save Functions\n",
         "Define functions to save snapshots when you make the JetBot to move forward, turn left and turn right."
       ]
     },
@@ -358,7 +358,7 @@
       "source": [
         "## Data Collection\n",
         "\n",
-        "Now we are ready to perform data collection."
+        "Now we are ready to perform the data collection."
       ]
     },
     {
@@ -400,7 +400,7 @@
       },
       "source": [
         "## Stop Camera\n",
-        "After you finished the data collection, stop camera."
+        "After you finished the data collection, stop the camera."
       ]
     },
     {
@@ -421,7 +421,7 @@
       },
       "source": [
         "## Zip Dataset\n",
-        "Make `dataset.zip` so that we can upload it to Google Colab for training a model."
+        "Make `dataset` directory to `dataset.zip` so that we can upload it to Google Colab for training a model."
       ]
     },
     {
@@ -451,9 +451,9 @@
         "id": "YT25ppWEY5Qk"
       },
       "source": [
-        "## *Delete All Dataset (Danger!)*\n",
+        "## ***(Danger!!) Delete All Dataset***\n",
         "\n",
-        "Next commands delete all of your collected data in ``dataset`` directory."
+        "Next commands delete all of your collected data in the ``dataset`` directory."
       ]
     },
     {
@@ -462,8 +462,8 @@
         "id": "K2CEfkSqY5Qk"
       },
       "source": [
-        "import shutil\n",
-        "shutil.rmtree(\"dataset\")"
+        "# import shutil\n",
+        "# shutil.rmtree(\"dataset\")"
       ],
       "execution_count": null,
       "outputs": []
