--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -22,21 +22,10 @@
     "colab": {
       "name": "live_demo.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/naoya1110/road_following_by_classification/blob/main/live_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -45,7 +34,7 @@
       "source": [
         "# Road Following by Classification - Live Demo\n",
         "\n",
-        "In this notebook we will use the trained model that can distinguish **go forward**, **turn left** and **turn right** situations so that the JetBot can follow the road."
+        "In this notebook, we will try to make the JetBot to follow the desired road by using the model we trained."
       ]
     },
     {
@@ -55,7 +44,7 @@
       },
       "source": [
         "## Model Architecture\n",
-        "First we need to define a DNN model which is identical to the one used for training."
+        "First we need to define a DNN model that is identical to the one used for training."
       ]
     },
     {
@@ -149,7 +138,9 @@
       },
       "source": [
         "## Load The Best Model\n",
-        "Then load the `best_model.pth` that you trained on Google Colab."
+        "Next we need to upload the `best_model.pth` in the file browser.\n",
+        "\n",
+        "Then load the parameters on the model from the `best_model.pth`."
       ]
     },
     {
