--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -274,7 +274,7 @@
         "    y = model(x)\n",
         "    y = nn.Softmax(dim=1)(y)\n",
         "    y_idx = torch.argmax(y, dim=1).item()\n",
-        "    y_idx"
+        "    print(y_idx)"
       ]
     },
     {
@@ -357,22 +357,25 @@
         "import time\n",
         "t0 = time.time()\n",
         "\n",
-        "for i in range(2000):\n",
-        "    x = camera.value\n",
-        "    x = preprocess(x)\n",
-        "    y = model(x)\n",
-        "    y = nn.Softmax(dim=1)(y)\n",
-        "    y_idx = torch.argmax(y, dim=1).item()\n",
+        "with torch.no_grad():\n",
+        "    model.eval()\n",
         "\n",
-        "    if y_idx == 0: move_forward()\n",
-        "    elif y_idx == 1: turn_left()\n",
-        "    elif y_idx == 2: turn_right()\n",
-        "    \n",
-        "    now = time.time()\n",
-        "    dt = now-t0\n",
-        "    t0 = now\n",
-        "    FPS = 1/dt\n",
-        "    print(f\"\\r {i} action:{y_idx} dt:{dt:.5f} fps:{FPS:.1f}\", end=\"\")\n",
+        "    for i in range(2000):\n",
+        "        x = camera.value\n",
+        "        x = preprocess(x)\n",
+        "        y = model(x)\n",
+        "        y = nn.Softmax(dim=1)(y)\n",
+        "        y_idx = torch.argmax(y, dim=1).item()\n",
+        "\n",
+        "        if y_idx == 0: move_forward()\n",
+        "        elif y_idx == 1: turn_left()\n",
+        "        elif y_idx == 2: turn_right()\n",
+        "        \n",
+        "        now = time.time()\n",
+        "        dt = now-t0\n",
+        "        t0 = now\n",
+        "        FPS = 1/dt\n",
+        "        print(f\"\\r {i} action:{y_idx} dt:{dt:.5f} fps:{FPS:.1f}\", end=\"\")\n",
         "\n",
         "robot.stop()"
       ]
