--- a/live_demo_test.ipynb
+++ b/live_demo_test.ipynb
@@ -223,12 +223,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import torch.nn.functional as F\n",
+        "\n",
         "with torch.no_grad():\n",
         "    model.eval()\n",
         "    x = camera.value\n",
         "    x = preprocess(x)\n",
         "    y = model(x)\n",
-        "    y = nn.Softmax(dim=1)(y)\n",
+        "    y = F.softmax(y, dim=1)\n",
         "    y_idx = torch.argmax(y, dim=1).item()\n",
         "    print(y_idx)"
       ]
@@ -278,10 +280,10 @@
         "    robot.set_motors(0.3, 0.3)\n",
         "\n",
         "def turn_left():\n",
-        "    robot.set_motors(0.1, 0.3)\n",
+        "    robot.set_motors(0.0, 0.3)\n",
         "\n",
         "def turn_right():\n",
-        "    robot.set_motors(0.3, 0.1)"
+        "    robot.set_motors(0.3, 0.0)"
       ]
     },
     {
@@ -342,7 +344,7 @@
         "id": "tHUWbWd3I6c2"
       },
       "source": [
-        "When you are done, stop the robot and the camera."
+        "If you are done, stop the robot and the camera."
       ]
     },
     {
