--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -1,30 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.9"
-    },
-    "colab": {
-      "name": "data_collection.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -70,31 +44,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "colab": {
           "referenced_widgets": [
             "a570e926b1bb476b9bfa908ec3307fee"
           ]
         },
         "id": "78FULcqnY5Qc",
-        "outputId": "2cea0fb5-49fd-4858-9660-8aa193985c20"
+        "outputId": "2cea0fb5-49fd-4858-9660-8aa193985c20",
+        "scrolled": true
       },
-      "source": [
-        "import traitlets\n",
-        "import ipywidgets.widgets as widgets\n",
-        "from IPython.display import display\n",
-        "from jetbot import Camera, bgr8_to_jpeg\n",
-        "\n",
-        "camera = Camera.instance(width=224, height=224)\n",
-        "\n",
-        "image = widgets.Image(format='jpeg', width=224, height=224)  # this width and height doesn't necessarily have to match the camera\n",
-        "\n",
-        "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
-        "\n",
-        "display(image)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -110,6 +70,20 @@
           "metadata": {},
           "output_type": "display_data"
         }
+      ],
+      "source": [
+        "import traitlets\n",
+        "import ipywidgets.widgets as widgets\n",
+        "from IPython.display import display\n",
+        "from jetbot import Camera, bgr8_to_jpeg\n",
+        "\n",
+        "camera = Camera.instance(width=224, height=224)\n",
+        "\n",
+        "image = widgets.Image(format='jpeg', width=224, height=224)  # this width and height doesn't necessarily have to match the camera\n",
+        "\n",
+        "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
+        "\n",
+        "display(image)"
       ]
     },
     {
@@ -124,15 +98,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "eKIkTXJJY5Qd"
       },
+      "outputs": [],
       "source": [
         "from jetbot import Robot\n",
         "robot = Robot()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,10 +120,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "277HbA3bY5Qe",
         "outputId": "f656c544-b3cc-462a-e899-ae233ff87406"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Directories not created because they already exist\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
@@ -164,16 +148,6 @@
         "    os.makedirs(right_dir)\n",
         "except FileExistsError:\n",
         "    print('Directories not created because they already exist')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Directories not created because they already exist\n"
-          ]
-        }
       ]
     },
     {
@@ -189,6 +163,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "referenced_widgets": [
@@ -198,6 +173,22 @@
         "id": "VN79QZNnY5Qf",
         "outputId": "273adabc-fbe1-4a4f-d06a-aa8e8a17af78"
       },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "96b794084331460fa3b38b18aed60a87",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "VBox(children=(HBox(children=(Button(description='left', layout=Layout(align_self='center', height='50px', wid…"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "try:\n",
         "    del forward_button\n",
@@ -227,23 +218,6 @@
         "\n",
         "# display controller box\n",
         "display(counters_box)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "96b794084331460fa3b38b18aed60a87",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "VBox(children=(HBox(children=(Button(description='left', layout=Layout(align_self='center', height='50px', wid…"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
       ]
     },
     {
@@ -258,9 +232,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "6WbGsdBgY5Qg"
       },
+      "outputs": [],
       "source": [
         "import time\n",
         "\n",
@@ -269,18 +245,16 @@
         "    time.sleep(0.2)\n",
         "    robot.stop()\n",
         "\n",
-        "def move_left():\n",
+        "def turn_left():\n",
         "    robot.set_motors(0, 0.3)\n",
         "    time.sleep(0.2)\n",
         "    robot.stop()\n",
         "\n",
-        "def move_right():\n",
+        "def turn_right():\n",
         "    robot.set_motors(0.3, 0)\n",
         "    time.sleep(0.2)\n",
         "    robot.stop()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,13 +268,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "svZXwEEYY5Qi"
       },
+      "outputs": [],
       "source": [
         "from uuid import uuid1\n",
         "from datetime import datetime\n",
-        "\n",
         "\n",
         "def save_snapshot(directory):\n",
         "    now = datetime.now()\n",
@@ -318,13 +293,13 @@
         "def save_left():\n",
         "    global left_dir, left_count\n",
         "    save_snapshot(left_dir)\n",
-        "    move_left()\n",
+        "    turn_left()\n",
         "    left_count.value = len(os.listdir(left_dir))\n",
         "\n",
         "def save_right():\n",
         "    global right_dir, right_count\n",
         "    save_snapshot(right_dir)\n",
-        "    move_right()\n",
+        "    turn_right()\n",
         "    right_count.value = len(os.listdir(right_dir))\n",
         "\n",
         "    \n",
@@ -334,9 +309,7 @@
         "forward_button.on_click(lambda x: save_forward())\n",
         "left_button.on_click(lambda x: save_left())\n",
         "right_button.on_click(lambda x: save_right())"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -351,6 +324,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "referenced_widgets": [
@@ -360,10 +334,6 @@
         "id": "Un2_CM-CY5Qi",
         "outputId": "d5b4d848-70fb-47fd-c19e-5e33a6960860"
       },
-      "source": [
-        "display(widgets.VBox([image, counters_box]))"
-      ],
-      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -379,6 +349,9 @@
           "metadata": {},
           "output_type": "display_data"
         }
+      ],
+      "source": [
+        "display(widgets.VBox([image, counters_box]))"
       ]
     },
     {
@@ -393,14 +366,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "A7VxIXqnY5Qj"
       },
+      "outputs": [],
       "source": [
         "camera.stop()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -414,14 +387,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ilWW5zFpY5Qk"
       },
+      "outputs": [],
       "source": [
         "!zip -r -q dataset.zip dataset"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -446,15 +419,41 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "K2CEfkSqY5Qk"
       },
+      "outputs": [],
       "source": [
         "# import shutil\n",
         "# shutil.rmtree(\"dataset\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "data_collection.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.9"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
