--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afef020e31964dfbb9f2e025abeb6f1b",
+       "model_id": "a8355e77fd14445f926ae15518c9075b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,36 +260,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's check how long it takes to make an inference."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30.3 ms ± 2.63 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit   # this is a magic-command to measure time to execute codes in this cell.\n",
-    "\n",
-    "x = camera.value\n",
-    "x = preprocess(x)\n",
-    "y = model(x)\n",
-    "y = F.softmax(y, dim=1)\n",
-    "y_idx = torch.argmax(y, dim=1).item()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "StFLmt8uFghc"
    },
@@ -300,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "bCsq9LspFghc"
    },
@@ -323,20 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "id": "b8yMHZ0VFghc"
    },
    "outputs": [],
    "source": [
     "def move_forward():\n",
-    "    robot.set_motors(0.3, 0.3)\n",
+    "    robot.set_motors(0.2, 0.2)\n",
     "\n",
     "def turn_left():\n",
-    "    robot.set_motors(0.0, 0.3)\n",
+    "    robot.set_motors(0.0, 0.2)\n",
     "\n",
     "def turn_right():\n",
-    "    robot.set_motors(0.3, 0.0)\n",
+    "    robot.set_motors(0.2, 0.0)\n",
     "    \n",
     "actions_dict = {0:\"Go Forward\", 1:\"Turn Left\", 2:\"Turn Right\"}"
    ]
@@ -353,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "id": "9kLBthwAFghc",
     "outputId": "863df5c6-2f49-42ab-e48a-bcba8f0ba838"
@@ -362,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afef020e31964dfbb9f2e025abeb6f1b",
+       "model_id": "a8355e77fd14445f926ae15518c9075b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:1000/1000   Action:Turn Right   FPS:35.4"
+      "Step:1000/1000   Action:Go Forward   FPS:30.9"
      ]
     }
    ],
@@ -423,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "id": "H6HPA2wWFghc"
    },
@@ -432,6 +402,13 @@
     "robot.stop()\n",
     "camera.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
