--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "id": "eTaXtdgTFghY"
    },
@@ -171,7 +171,7 @@
     "def preprocess(camera_value):\n",
     "    global device, normalize\n",
     "    x = camera_value\n",
-    "    x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)\n",
+    "    # x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)\n",
     "    x = x.transpose((2, 0, 1))\n",
     "    x = torch.from_numpy(x).float()\n",
     "    x = normalize(x)\n",
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8355e77fd14445f926ae15518c9075b",
+       "model_id": "556dfce64df940f6b56c0a1d04cd0e99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "0\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "bCsq9LspFghc"
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "id": "b8yMHZ0VFghc"
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "id": "9kLBthwAFghc",
     "outputId": "863df5c6-2f49-42ab-e48a-bcba8f0ba838"
@@ -332,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8355e77fd14445f926ae15518c9075b",
+       "model_id": "556dfce64df940f6b56c0a1d04cd0e99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:1000/1000   Action:Go Forward   FPS:30.9"
+      "Step:1000/1000   Action:Turn Left   FPS:31.3"
      ]
     }
    ],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "H6HPA2wWFghc"
    },
